Rewritten fetch function

--- a/src/Abilities.sass
+++ b/src/Abilities.sass
@@ -5,9 +5,9 @@
   background-color: green
 
 .button
-  border-radius: 3px
+  border-radius: 15px
   font-weight: 300
-  align-items: center
+  padding: 5px 25px
 
 .flying
   background-color: darkgrey
@@ -49,5 +49,5 @@
   background-color: aquamarine
 
 .text
-  text-align: center
   color: white
+
