--- a/src/Abilities.css
+++ b/src/Abilities.css
@@ -7,9 +7,9 @@
 }
 
 .button {
-  border-radius: 3px;
+  border-radius: 15px;
   font-weight: 300;
-  align-items: center;
+  padding: 5px 25px;
 }
 
 .flying {
@@ -65,7 +65,6 @@
 }
 
 .text {
-  text-align: center;
   color: white;
 }
 
