--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,9 @@ ul{
   list-style: none;
   padding: 0;
   margin: 0;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
+  margin-block-start: 0;
+  margin-block-end: 0;
   margin-inline-start: 0;
   margin-inline-end: 0;
-  padding-inline-start: 40px;
+
 }
