--- a/src/MainContainer.module.css
+++ b/src/MainContainer.module.css
@@ -6,6 +6,38 @@
   gap: 20px;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.element {
+  box-shadow: 1px 5px 2pc lightblue;
+  border-radius: 10px;
+  list-style-type: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  padding: 0;
+}
+
+.image {
+  width: 200px;
+}
+
+.name {
+  color: #0007DE;
+}
+
+.abilitiesList {
+  display: flex;
+  gap: 10px;
+  padding: 0 7px 27px 7px;
 }
 
 /*# sourceMappingURL=MainContainer.module.css.map */
