--- a/src/MainContainer.module.css
+++ b/src/MainContainer.module.css
@@ -24,6 +24,7 @@
   margin-inline-start: 0;
   margin-inline-end: 0;
   padding: 0;
+  width: 218px;
 }
 
 .image {
@@ -38,6 +39,19 @@
   display: flex;
   gap: 10px;
   padding: 0 7px 27px 7px;
+}
+
+.emptySearchContainer {
+  margin-top: 40px;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.emptySearchImage {
+  width: 300px;
 }
 
 /*# sourceMappingURL=MainContainer.module.css.map */
