--- a/src/MainContainer.module.sass
+++ b/src/MainContainer.module.sass
@@ -23,6 +23,7 @@
   margin-inline-start: 0
   margin-inline-end: 0
   padding: 0
+  width: 218px
 
 .image
   width: 200px
@@ -34,3 +35,14 @@
   display: flex
   gap: 10px
   padding: 0 7px 27px 7px
+
+.emptySearchContainer
+  margin-top: 40px
+  display: flex
+  gap: 20px
+  align-items: center
+  justify-content: center
+  flex-direction: column
+
+.emptySearchImage
+  width: 300px
