--- a/src/Abilities.sass
+++ b/src/Abilities.sass
@@ -5,8 +5,9 @@
   background-color: green
 
 .button
-  border-radius: 15px
+  border-radius: 6px
   font-weight: 300
+  font-size: 12px
   padding: 5px 25px
 
 .flying
