--- a/src/MainContainer.module.css
+++ b/src/MainContainer.module.css
@@ -2,17 +2,64 @@
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  padding: 20px;
-  gap: 20px;
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
 }
+@media screen and (min-width: 1280px) {
+  .mainContainer {
+    padding: 20px;
+    gap: 20px;
+  }
+}
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
+  .mainContainer {
+    padding: 15px;
+    gap: 15px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .mainContainer {
+    padding: 10px;
+    gap: 10px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .mainContainer {
+    padding: 5px;
+    gap: 5px;
+  }
+}
 
 .info {
   display: flex;
+  box-sizing: border-box;
   justify-content: space-between;
-  padding: 10px;
+  width: 100%;
+}
+@media screen and (min-width: 1280px) {
+  .info {
+    padding: 10px;
+    height: 20px;
+  }
+}
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
+  .info {
+    padding: 7px;
+    height: 17px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .info {
+    padding: 5px;
+    height: 13px;
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 768px) {
+  .info {
+    padding: 3px;
+    height: 10px;
+  }
 }
 
 .element {
@@ -24,21 +71,48 @@
   margin-inline-start: 0;
   margin-inline-end: 0;
   padding: 0;
-  width: 218px;
+  width: 15%;
+  height: 30%;
 }
 
 .image {
-  width: 200px;
+  width: 75%;
 }
 
 .name {
   color: #0007DE;
+  font-size: 0.85em;
+  box-sizing: border-box;
+}
+
+.id {
+  font-size: 0.85em;
+  box-sizing: border-box;
 }
 
 .abilitiesList {
   display: flex;
-  gap: 10px;
-  padding: 0 7px 27px 7px;
+  justify-content: space-between;
+}
+@media screen and (min-width: 1280px) {
+  .abilitiesList {
+    padding: 0 15px 27px 15px;
+  }
+}
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
+  .abilitiesList {
+    padding: 0 12px 24px 12px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .abilitiesList {
+    padding: 0 10px 21px 10px;
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 768px) {
+  .abilitiesList {
+    padding: 0 7px 18px 7px;
+  }
 }
 
 .emptySearchContainer {
