--- a/src/App.module.sass
+++ b/src/App.module.sass
@@ -1,3 +1,6 @@
+body
+  box-sizing: border-box
+
 .app
   margin: 0
   padding: 0
@@ -16,3 +19,14 @@ input
 button
   border-radius: 20px
   border: none
+
+ul
+  list-style: none
+  padding: 0
+  margin: 0
+  margin-block-start: 0
+  margin-block-end: 0
+  margin-inline-start: 0
+  margin-inline-end: 0
+  text-decoration: none
+  border-bottom: none
