--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -1,11 +1,17 @@
-@import './assets/Colors.sass'
-@import "./assets/Monserrat_font"
+@import '../../assets/Colors'
+@import "../../assets/Monserrat_font"
+@import "/src/mixins/Mixins.sass"
+
 
 .header
   background-color: $blue
   display: flex
   justify-content: center
   align-items: center
+  text-decoration: none
+  font-family: "Monserrat", sans-serif
+  position: relative
+  overflow: hidden
 
 .headerContainer
   display: flex
@@ -18,6 +24,10 @@
   color: white
   font-size: 36px
   font-weight: 400
+  @include mobile
+    font-size: 20px
+  @include tablet
+    font-size: 28px
 
 .inputBox
   display: flex
@@ -36,6 +46,8 @@
   border: none
   width: 200px
   margin-top: 3px
+  @include mobile
+    width: 150px
 
 .input:focus
   border: none
@@ -51,6 +63,14 @@ input::-webkit-input-placeholder
   color: white
   padding: 10px 20px
   cursor: pointer
+  border-radius: 20px
+  border: transparent
 
 .image
   width: 200px
+  position: absolute
+  top: -30%
+  right: -5%
+  opacity: 0.5
+
+
