--- a/src/components/MainContainer/MainContent.module.sass
+++ b/src/components/MainContainer/MainContent.module.sass
@@ -4,7 +4,7 @@
   width: 100%
   display: flex
   flex-wrap: wrap
-  justify-content: start
+  justify-content: center
   align-items: center
   box-sizing: border-box
   text-decoration: none
